--- a/02. Starbucks 사이트 프로젝트/Pmain.html
+++ b/02. Starbucks 사이트 프로젝트/Pmain.html
@@ -8,7 +8,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/Pmain.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-  <script src="js/Pmain.js"></script>
+  <script defer src="js/Pmain.js"></script>
 </head>
 
 <body>
