01. Github 사이트 프로젝트 코딩 파일

--- a/01. Github 사이트 프로젝트/github-사이트.html
+++ b/01. Github 사이트 프로젝트/github-사이트.html
@@ -8,7 +8,7 @@
     <meta name="description" content="첫 사이트 만들기">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1, minimum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    
+
     <!-- http://ogp.me/ -->
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="GitHub">
@@ -34,8 +34,7 @@
     <link rel="stylesheet" href="css/github-사이트.css">
     <link rel="stylesheet" media="(max-width: 1024px)" href="css/github-사이트_medium.css">
     <link rel="stylesheet" media="(max-width: 768px)" href="css/github-사이트_small.css">
-   
-    <script defer src="js/main-p.js"></script>
+    <script defer src="js/main-p.js"></script> <!--defer 추가시 html 파일 전체를 읽은뒤 js 실행을 한다.-->
 
 </head>
 <body>
