--- a/02. Starbucks 사이트 프로젝트/Pmain.html
+++ b/02. Starbucks 사이트 프로젝트/Pmain.html
@@ -7,18 +7,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="css/Pmain.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"> -->
   <script defer src="js/Pmain.js"></script>
 </head>
 
 <body>
   <!-- <div></div> -->
-  <div class="container">
+  <!-- <div class="container">
     <div class="item">1</div>
     <div class="item">2</div>
-    <div class="item">3</div>
+    <div class="item">3</div> -->
     <!-- <div class="item">4</div>
-    <div class="item">5</div> -->
+    <div class="item">5</div> 
+  </div> -->
+  <div class="container">
+    <div class="item">AB</div>
   </div>
 
 </body>
