JS 내용 업데이트

--- a/02. Starbucks 사이트 프로젝트/Pmain.html
+++ b/02. Starbucks 사이트 프로젝트/Pmain.html
@@ -20,10 +20,10 @@
     <!-- <div class="item">4</div>
     <div class="item">5</div> 
   </div> -->
-  <div class="container">
+  <!-- <div class="container">
     <div class="item">AB</div>
-  </div>
-
+  </div> -->
+  <div class="box">Box!!</div>
 </body>
 
 </html>
