--- a/02. Starbucks 사이트 프로젝트/Pmain.html
+++ b/02. Starbucks 사이트 프로젝트/Pmain.html
@@ -23,7 +23,13 @@
   <!-- <div class="container">
     <div class="item">AB</div>
   </div> -->
+
+  <!-- <div class="box">Box!!</div> -->
+
   <div class="box">Box!!</div>
+  <div class="box">2</div>
+  <div class="box">3</div>
+  <div class="box">4</div>
 </body>
 
 </html>
