image-icon 폴더명 -> images로 변경

--- a/02. Starbucks 사이트 프로젝트/index.html
+++ b/02. Starbucks 사이트 프로젝트/index.html
@@ -12,7 +12,7 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"> <!--reset.css = 스타일 초기화-->
   <link rel="stylesheet" href="css/main.css">
-  <link rel="shortcut icon" href="image-icon/favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico">
   
   <script defer src="js/main.js"></script>
 </head>
