로그인 연결 링크 수정

--- a/02. Starbucks 사이트 프로젝트/index.html
+++ b/02. Starbucks 사이트 프로젝트/index.html
@@ -42,8 +42,6 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   
-  
-
   <script defer src="./js/youtube.js"></script>
   <script defer src="./js/common.js"></script>
   <script defer src="js/main.js"></script>
@@ -60,7 +58,7 @@
       <div class="sub-menu">
         <ul class="menu">
           <li>
-            <a href="./index.html/signin">Sign In</a>
+            <a href="./signin/index.html">Sign In</a>
           </li>
           <li>
             <a href="javascript:void(0)">My Starbucks</a>
